--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -299,7 +299,7 @@ p {
   background-color: #50e3a4;
   border: none;
   cursor: pointer;
-  color: #fff;
+  color: #000;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 700;
