--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -169,7 +169,7 @@
   background-color: #50e3a4;
   border: none;
   cursor: pointer;
-  color: #000;
+  color: #fff;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 700;
